[gd_scene load_steps=4 format=3 uid="uid://ckylb177r5dm5"]

[ext_resource type="Script" uid="uid://cj70etrfut3ml" path="res://examples/dice_roler/dice_set_editor.gd" id="1_5123s"]
[ext_resource type="PackedScene" uid="uid://bsu4a4i0b54qv" path="res://examples/dice_roler/preset_loader.tscn" id="2_d8jwp"]
[ext_resource type="Script" uid="uid://darv2rf2yrpi" path="res://examples/dice_roler/window_responsiver.gd" id="3_h5tkg"]

[node name="DiceSetEditor" type="ConfirmationDialog"]
title = "Dice Set Editor"
initial_position = 1
size = Vector2i(800, 500)
visible = true
ok_button_text = "Ok"
script = ExtResource("1_5123s")

[node name="Tree" type="Tree" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 792.0
offset_bottom = 451.0
size_flags_vertical = 3
columns = 4
column_titles_visible = true
hide_folding = true
hide_root = true

[node name="SidesPopup" type="PopupMenu" parent="."]
prefer_native_menu = true

[node name="ColorPopup" type="PopupPanel" parent="."]
size = Vector2i(306, 584)

[node name="ColorPicker" type="ColorPicker" parent="ColorPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 302.0
offset_bottom = 580.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PresetsPopup" type="PopupMenu" parent="."]
initial_position = 2

[node name="PresetNameDialog" type="PopupPanel" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="PresetNameDialog"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PresetNameDialog/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PresetNameDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name the dice set"

[node name="DicesetPreview" type="HBoxContainer" parent="PresetNameDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PresetNameEdit" type="LineEdit" parent="PresetNameDialog/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PresetLoader" parent="." instance=ExtResource("2_d8jwp")]
visible = false

[node name="WindowResponsiver" type="Node" parent="."]
script = ExtResource("3_h5tkg")
metadata/_custom_type_script = "uid://darv2rf2yrpi"
